--- a/html/lesson1.html
+++ b/html/lesson1.html
@@ -4,12 +4,17 @@
     </head>
     <body>
         <b><font size="2em"><font color="red">HTML</font></font><font size="5">の基礎</font></b>
-            <br><img src="lesson_picture.png" width="320" height="320"></br>
+            <div><img src="lesson_picture.png" width="320" height="320"></div>
             <ol>
                 <li>C言語</li>
                 <li>HTML</li>
                 <li>Node.js</li>
                 <li>JavaScript</li>
             </ol>
+            <table border="2">
+                <tr><td>作成</td><td>坂井</td></tr>
+                <tr><td>連絡先</td><td>yuto0768@gmail.com</td></tr>
+            </table>
+            <a href="lesson2.html">レッスン２へ</a>
     </body>
  </html>
